--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -42,7 +42,7 @@ jobs:
         username: ${{ secrets.SSH_USERNAME }}
         key: ${{ secrets.SSH_PRIVATE_KEY }}
         script: |
-          cd ~/var/www/rukun-warga-digital
+          cd /var/www/rukun-warga-digital
           git pull origin master
           git status
           composer install --prefer-dist --no-ansi --no-interaction  --no-progress --no-scripts --no-dev --optimize-autoloader -o
