--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -46,9 +46,12 @@ jobs:
           cd /var/www/rukun-warga-digital
           git pull origin master
           git status
-          composer install --prefer-dist --no-ansi --no-interaction  --no-progress --no-scripts --no-dev --optimize-autoloader -o
+          composer install --prefer-dist --no-ansi --no-interaction --no-progress --no-scripts --no-dev --optimize-autoloader -o
           php artisan migrate
+          php artisan config:clear
           php artisan config:cache
+          php artisan route:clear
           php artisan route:cache
+          php artisan view:clear
           php artisan view:cache
           php artisan cache:clear
