--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,8 @@
         "laravel/tinker": "^2.8",
         "maatwebsite/excel": "^3.1",
         "opcodesio/log-viewer": "^2.5",
-        "spatie/laravel-query-builder": "^5.2",
-        "tymon/jwt-auth": "^2.0"
+        "php-open-source-saver/jwt-auth": "^2.1",
+        "spatie/laravel-query-builder": "^5.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
