--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -47,7 +47,8 @@ jobs:
           git pull origin master
           git status
           composer install --prefer-dist --no-ansi --no-interaction --no-progress --no-scripts --no-dev --optimize-autoloader -o
-          php artisan migrate
+          php artisan l5-swagger:generate
+          php artisan migrate --step
           php artisan config:clear
           php artisan config:cache
           php artisan route:clear
