--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -46,7 +46,7 @@ jobs:
           cd /var/www/rukun-warga-digital
           git pull origin master
           git status
-          composer install --prefer-dist --no-ansi --no-interaction --no-progress --no-scripts --no-dev --optimize-autoloader -o
+          composer install --prefer-dist --no-ansi --no-interaction --no-progress --no-scripts --optimize-autoloader -o
           php artisan l5-swagger:generate
           php artisan migrate --step
           php artisan config:clear
